--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,28 @@
     <title>New Year</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Hello Word</h1>
+    <!-- header start -->
+    <header>
+        <section>
+            <img class="bennarImg" src="./new-year-new-me/images/banner/banner1.png" alt="" srcset="">
+        </section>
+        <section class="bennarText">
+            <article class="hrederText">
+                <h1>All Thinks Are </h1>
+                <h1>Possible If You</h1>
+                <h1>believe</h1>
+            </article>
+            <article class="para">
+                <p>There are many variations of passages of Lorem Ipsum</p>
+                <p>available, but the majority have suffered alteration in some</p>
+                <p>form, by injected humour, or randomised words</p>
+            </article>
+            <button class="btn">Contact Us</button>
+        </section>
+    </header>
+    <!-- header end -->
 </body>
+
 </html>
