--- a/index.html
+++ b/index.html
@@ -30,6 +30,58 @@
         </section>
     </header>
     <!-- header end -->
+
+    <!-- main start -->
+    <main>
+        <!-- My failures start -->
+        <section class="mainSection">
+            <img class="mainImg" src="./new-year-new-me/images/person.png" alt="" srcset="">
+            <article class="mainArticle">
+                <div class="mainArticleText">
+                    <h1>My failures of</h1>
+                    <h1>previous year</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, repudiandae atque
+                        accusantium sunt similiquet emporibus?</p>
+                </div>
+                <ol>
+                    <li>Contrary to popular belief, is not simply</li>
+                    <li>Contrary to popular belief.</li>
+                    <li>Contrary to popular , is not simply</li>
+                    <li>Contrary to popular belief, is not simply</li>
+                    <li>Contrary to popular simply.</li>
+                </ol>
+            </article>
+        </section>
+        <!-- My failures end -->
+        <!-- my plans start -->
+        <section>
+            <h1 class="myPlans">My Plans</h1>
+            <div class="plans">
+                <div class="web">
+                    <img src="./new-year-new-me/images/icons/web.png" alt="" srcset="">
+                    <h2>Web Development</h2>
+                    <p>1 want to start</p>
+                </div>
+                <div class="Javascript">
+                    <img src="./new-year-new-me/images/icons/js.png" alt="" srcset="">
+                    <h2>Javascript</h2>
+                    <p>1 want to start</p>
+                </div>
+                <div class="smoking">
+                    <img src="./new-year-new-me/images/icons/smoke.png" alt="" srcset="">
+                    <h2>Smoking Habit</h2>
+                    <p>1 want to start</p>
+                </div>
+                <div class="ecommerce">
+                    <img src="./new-year-new-me/images/icons/ecom.png" alt="" srcset="">
+                    <h2>ecommerce</h2>
+                    <p>1 want to start</p>
+                </div>
+            </div>
+        </section>
+        <!-- my plans end -->
+    </main>
+    <!-- main end -->
 </body>
 
 </html>
