--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
             </div>
         </section>
         <!-- my plans end -->
+        <!-- Awlays keep a positive start-->
+        <section class="positive">
+            <h1>Awlays keep a positive</h1>
+            <h2>mindset</h2>
+            <button class="btn">Call Now</button>
+        </section>
+        <!-- Awlays keep a positive end-->
     </main>
     <!-- main end -->
 </body>
