--- a/index.html
+++ b/index.html
@@ -53,6 +53,26 @@
             </article>
         </section>
         <!-- My failures end -->
+        <!-- card start -->
+        <section class="card">
+            <div class="cards1">
+                <h1>Web Development</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi tempore neque quod laboriosam ducimus cum nam maiores voluptatibus earum eaque.</p>
+            </div>
+            <div class="cards2">
+                <h1>Web Development</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi tempore neque quod laboriosam ducimus cum nam maiores voluptatibus earum eaque.</p>
+            </div>
+            <div class="cards3">
+                <h1>Web Development</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi tempore neque quod laboriosam ducimus cum nam maiores voluptatibus earum eaque.</p>
+            </div>
+            <div class="cards4">
+                <h1>Web Development</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi tempore neque quod laboriosam ducimus cum nam maiores voluptatibus earum eaque.</p>
+            </div>
+        </section>
+        <!-- card end -->
         <!-- my plans start -->
         <section>
             <h1 class="myPlans">My Plans</h1>
@@ -89,6 +109,28 @@
         <!-- Awlays keep a positive end-->
     </main>
     <!-- main end -->
+    <!-- footer start -->
+    <footer>
+        <section class="future">
+            <h1>Future</h1>
+            <p>There are many variations of passages of Lorem Ipsum
+                available, but the majority have suffered alteration in some
+                form, by injected humour, or randomised words</p><br><br>
+            <p>Email : Email : info@gmail.com </p><br>
+            <p>Phone : 123456789</p><br>
+                <div class="icon">
+                    <img src="./new-year-new-me/images/icons/fb.png" alt="" srcset="">
+                    <img src="./new-year-new-me/images/icons/twitter.png" alt="" srcset="">
+                    <img src="./new-year-new-me/images/icons/youtube.png" alt="" srcset="">
+                </div>
+        </section>
+        <section class="subscribe">
+            <h3>Subscribe</h3>
+            <input type="text" name="name" id=""><br>
+            <button class="subscribeBtn">Subscribe</button>
+        </section>
+    </footer>
+    <!-- footer end -->
 </body>
 
 </html>
