--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -43,13 +46,13 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, repudiandae atque
                         accusantium sunt similiquet emporibus?</p>
                 </div>
-                <ol>
+                <ul>
                     <li>Contrary to popular belief, is not simply</li>
                     <li>Contrary to popular belief.</li>
                     <li>Contrary to popular , is not simply</li>
                     <li>Contrary to popular belief, is not simply</li>
                     <li>Contrary to popular simply.</li>
-                </ol>
+                </ul>
             </article>
         </section>
         <!-- My failures end -->
